tests/failures/invalid_addmm.stderr
error: Second dim was expected to be Dim { expr: Symbol("H3") } but found Dim { expr: Symbol("H4") }
  --> tests/failures/invalid_addmm.rs:20:50
   |
20 |     let hidden_states = dense_4h_to_h_bias.addmm(&hidden_states, &dense_4h_to_h);
   |                                                  ^^^^^^^^^^^^^^

error: Second dim was expected to be Dim { expr: Symbol("H") } but found Dim { expr: Symbol("H4") }
  --> tests/failures/invalid_addmm.rs:34:50
   |
34 |     let hidden_states = dense_4h_to_h_bias.addmm(&hidden_states, &dense_h_to_4h); // Dimension mismatch wrong argument
   |                                                  ^^^^^^^^^^^^^^

error: Second dim was expected to be Dim { expr: Symbol("H") } but found Dim { expr: Symbol("H4") }
  --> tests/failures/invalid_addmm.rs:34:66
   |
34 |     let hidden_states = dense_4h_to_h_bias.addmm(&hidden_states, &dense_h_to_4h); // Dimension mismatch wrong argument
   |                                                                  ^^^^^^^^^^^^^^

error: This tensor must be 2 dimensional but found TensorType { shape: [Dim { expr: Symbol("B") }, Dim { expr: Symbol("S") }, Dim { expr: Symbol("H") }], kind: Implicit, device: Implicit }
  --> tests/failures/invalid_addmm.rs:47:50
   |
47 |     let hidden_states = dense_h_to_4h_bias.addmm(&hidden_states, &dense_h_to_4h); //Mismatch addmm
   |                                                  ^^^^^^^^^^^^^^

error: Second dim was expected to be Dim { expr: Symbol("H") } but found Dim { expr: Symbol("S") }
  --> tests/failures/invalid_addmm.rs:47:50
   |
47 |     let hidden_states = dense_h_to_4h_bias.addmm(&hidden_states, &dense_h_to_4h); //Mismatch addmm
   |                                                  ^^^^^^^^^^^^^^

error: Second dim was expected to be Dim { expr: Symbol("H") } but found Dim { expr: Symbol("H4") }
  --> tests/failures/invalid_addmm.rs:53:50
   |
53 |     let hidden_states = dense_4h_to_h_bias.addmm(&hidden_states, &dense_h_to_4h);
   |                                                  ^^^^^^^^^^^^^^

error: Second dim was expected to be Dim { expr: Symbol("H") } but found Dim { expr: Symbol("H4") }
  --> tests/failures/invalid_addmm.rs:53:66
   |
53 |     let hidden_states = dense_4h_to_h_bias.addmm(&hidden_states, &dense_h_to_4h);
   |                                                                  ^^^^^^^^^^^^^^
